k8s/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: leprechaun
  labels:
    app.kubernetes.io/name: leprechaun
    app.kubernetes.io/part-of: leprechaun
