k8s/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: leprechaun-api
  namespace: leprechaun
  labels:
    app.kubernetes.io/name: leprechaun-api
    app.kubernetes.io/part-of: leprechaun
    app.kubernetes.io/component: api
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 8000
      protocol: TCP
      name: http
  selector:
    app.kubernetes.io/name: leprechaun-api
